--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
   </head>
   <body>
     <div class="container">
-      <img role="logo" src="images/logo.svg" alt="logo" />
-      <div role="heading-text" class="text-head">
+      <img src="images/logo.svg" alt="logo" />
+      <div class="text-head">
         <h1>We are launching <span>soon!</span></h1>
         <p>Subscribe and get notified</p>
       </div>
       <form action="#" class="form">
         <input
           type="text"
-          role="input-email"
           class="email-input"
           id="email-input"
           placeholder="Your email address..."
@@ -55,7 +54,7 @@
           Notify Me
         </button>
       </form>
-      <div class="illustration" role="illustration">
+      <div class="illustration">
         <img
           src="images/illustration-dashboard.png"
           alt="illustration-dashboard"
