--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
           type="text"
           class="email-input"
           id="email-input"
+          role="email"
           placeholder="Your email address..."
         />
         <p class="alert" id="alert">Please provide a vailid email address</p>
         <p class="alert2" id="alert2">
           Whoops! It looks like you forgot to add your email
         </p>
-        <button role="submit-button" class="notify-btn" id="notify-btn">
+        <button role="submit" class="notify-btn" id="notify-btn">
           Notify Me
         </button>
       </form>
