--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
     <title>Frontend Mentor | Ping coming soon page</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
+
     </style>
   </head>
   <body>
@@ -44,14 +37,14 @@
           type="text"
           class="email-input"
           id="email-input"
-          role="email"
+          role="input"
           placeholder="Your email address..."
         />
         <p class="alert" id="alert">Please provide a vailid email address</p>
         <p class="alert2" id="alert2">
           Whoops! It looks like you forgot to add your email
         </p>
-        <button role="submit" class="notify-btn" id="notify-btn">
+        <button role="button" class="notify-btn" id="notify-btn">
           Notify Me
         </button>
       </form>
