--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
           type="text"
           class="email-input"
           id="email-input"
-          role="input"
           placeholder="Your email address..."
         />
         <p class="alert" id="alert">Please provide a vailid email address</p>
         <p class="alert2" id="alert2">
           Whoops! It looks like you forgot to add your email
         </p>
-        <button role="button" class="notify-btn" id="notify-btn">
+        <button  class="notify-btn" id="notify-btn">
           Notify Me
         </button>
       </form>
